# rustphidgets

./: .gitignore  Cargo.toml  README.md  build.rs  phidget22.rs
.github/workflows/: rust.yml
src/: common.rs  lib.rs  main.rs  phidget.rs  phidget22.rs  phidgets.rs
src/phidget/: helpers.rs  humidity.rs  lcd.rs  network.rs  temperature.rs
src/phidgets/: common.rs  helpers.rs  humidity.rs  lcd.rs  network.rs  phidget22.rs  temperature.rs
