[package]
name = "rustphidgets"
version = "0.1.0"
links="phidget22"
build = "build.rs"
authors = ["Justin Cichra <1342149+jrcichra@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"