[package]
name = "rustphidgets"
version = "0.1.0"
links="phidget22"
build = "build.rs"
description = "Rust bindings for the Phidgets C library"
homepage = "https://github.com/jrcichra/rustphidgets"
repository = "https://github.com/jrcichra/rustphidgets"
readme = "README.md"
license = "MIT"
authors = ["Justin Cichra <1342149+jrcichra@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
libc = "0.2"
